# JASM

./: .anjuta_sym_db.db  .gitignore  .gitignore.swp  BUGTRACKING  CMakeLists.txt  CMakeLists.txt   CNAME  Contributors  JASM  JASM.cbp  JASM.files  JASM.includes  Makefile  README.md  install.sh  jasm.service
JASM/: modules.xml  workspace.xml
bin-debug/: jasm  jasm-debug  jasmcli-debug  jasmgtk-debug
buildenv/: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CopyOfCMakeCache.txt  Makefile  cmake_install.cmake
buildenv/src/main/jasm/: Makefile  cmake_install.cmake
cmake/: .showsets.cmake.swp  showsets.cmake  showsettings.cmake
data/: Makefile.gui.tmp  jasmcli.Logsender.module.output  jconfig  uncrustify_jasm.cfg
doc/: about-it.md
doc/links/: dyn_lib  libcpuid  puntatori a funzione
pyclient_test/: #jasmcli.py#  commsock.py  formatprint.py  jasmcli.py
src/main/core/: README.md  a.out  core.c  core.h  fifo.c  fifo.h  jasm  main.c
src/main/gui/: README.md
src/main/gui/CLI - CommandLine/: Makefile  a.out  cli.c  compile.sh  ipc.c  ipc.h  miscellaneous.c  miscellaneous.h
src/main/gui/cli/: Makefile  cli.c  ipc.c  miscellaneous.c
src/main/interfacing.deprecated/cli/: Makefile  ipc.c  jasmcli  miscellaneous.c  signals.c
src/main/interfacing/cli/: Makefile  cli.c  ipc.c  ipc.c~  ipc.h  jasmcli  miscellaneous.c  miscellaneous.h  miscellaneous.h.gch  signals.c  signals.h
src/main/interfacing/gui/: JasmSwing.txt  Makefile  gui.c
src/main/jasm/: CMakeLists.txt  jasm
src/main/jasm/core/: #configfile.c#  #jasm.c#  #logger.c#  Makefile  TODO  cfgparser.c  cfgparser.h  configfile.c  configfile.h  configfile.plist  core.cdp  getter.c  getter.c.repl  getter.h  getter.h.repl  ipc.c  ipc.c~  ipc.h  ipc.h.gch  jasm  jasm.c  jasmbuild_info.h  jasmbuild_info.h.in  logger.c  logger.h  logger.h.gch  logger.plist  macros.h  macros.h.gch  miscellaneous.c  miscellaneous.h  miscellaneous.h.gch  module_logsender.c  modules.c  modules.c.repl  modules.h  modules.h.repl  modules_list.c  modules_list.h  modules_list.h.repl  (+5 more)
src/main/jasm/modules/: README.md  module_logsender.c  module_logsender.h
src/main/jasm/modules.deprecated/: module_logsender.c
src/test/dynamic_modules/: compile.sh  create_sharedlib.sh  dyn.c  module.c  module.h
testclient/: cli.py  sockets.py
